[package]
name = "ratata"
version = "0.1.1"
authors = ["David d.H. <75451291+david-d-h@users.noreply.github.com>"]
edition = "2021"
description = "A tiny application builder for ratatui that includes everything you need to get started."
repository = "https://github.com/david-d-h/ratata"
license = "MIT"
keywords = ["tui", "terminal"]

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
thiserror = "1.0.58"

[features]
default = ["paste"]
paste = ["crossterm/bracketed-paste"]